--- a/backend/frontend/public/index.html
+++ b/backend/frontend/public/index.html
@@ -17,6 +17,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>React App</title>
+
+    <script src="https://unpkg.com/react-yandex-maps/dist/production/react-yandex-maps.umd.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
