Updated contacts page

--- a/backend/frontend/public/index.html
+++ b/backend/frontend/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>React App</title>
+    <title>Mondino Tracker</title>
 
     <script src="https://unpkg.com/react-yandex-maps/dist/production/react-yandex-maps.umd.js"></script>
   </head>
