Fixed contactsMap, site description

--- a/backend/frontend/public/index.html
+++ b/backend/frontend/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Mondino Tracker"
+      content="Mondino Tracker - мобильные технологии на страже вашего здоровья"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -17,8 +17,6 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>Mondino Tracker</title>
-
-    <script src="https://unpkg.com/react-yandex-maps/dist/production/react-yandex-maps.umd.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
